--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,38 @@
 {
     "routes": [
-      { "handle": "filesystem" },
-      { "src": "/auth/(.*)", "dest": "/auth.js" },
-      { "src": "/user/(.*)", "dest": "/user.js" }
-      
+        {
+            "handle": "filesystem"
+        },
+        {
+            "src": "/auth/(.*)",
+            "dest": "/auth.js"
+        },
+        {
+            "src": "/user/(.*)",
+            "dest": "/user.js"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
+                },
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "*"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+                }
+            ]
+        }
     ]
-  }
-  
+}
